--- a/static/ods.dash.yaml
+++ b/static/ods.dash.yaml
@@ -304,93 +304,96 @@ pages:
                         - source: Components updated
                           function: SUM
     - columns:
-        - properties:
+        - span: 6
+          properties:
+            font-size: xx-large
             margin-top: 30px
           components:
             - displayer:
-                  component: echarts
-                  echarts:
-                      option: >-
-                              {
-                                  "title": {
-                                    "text": "UI components production advancement",
-                                    "textStyle": {
-                                      "color": "#00185e"
-                                    }
-                                  },
-                                  "grid": {
-                                    "top": 70
-                                  },
-                                  "color": ["#00185e", "#000e9c", "#0050d5", "#147de8", "#4ab0f5", "#73e3ff", "#7f7f7f", "#bfbfbf"],
-                                  "legend": {
-                                    "bottom": 0
-                                  },
-                                  "xAxis": [{
-                                    "axisTick": {
-                                      "alignWithLabel": true
-                                    },
-                                    "axisLabel": {
-                                      "interval": 0,
-                                      "rotate": 50,
-                                      "margin": 12
-                                    }
-                                  }],
-                                "yAxis": [
-                                  {
-                                    "type": "value",
-                                    "name": "Number of components"
+                component: echarts
+                echarts:
+                    option: >-
+                            {
+                                "title": {
+                                  "text": "UI components production advancement",
+                                  "textStyle": {
+                                    "color": "#00185e"
                                   }
+                                },
+                                "grid": {
+                                  "top": 70
+                                },
+                                "color": ["#00185e", "#000e9c", "#0050d5", "#147de8", "#4ab0f5", "#73e3ff", "#7f7f7f", "#bfbfbf"],
+                                "legend": {
+                                  "bottom": 0
+                                },
+                                "xAxis": [{
+                                  "axisTick": {
+                                    "alignWithLabel": true
+                                  },
+                                  "axisLabel": {
+                                    "interval": 0,
+                                    "rotate": 50,
+                                    "margin": 12
+                                  }
+                                }],
+                              "yAxis": [
+                                {
+                                  "type": "value",
+                                  "name": "Number of components"
+                                }
+                              ],
+                                "toolbox": {
+                                    "feature": {
+                                        "dataZoom": {},
+                                        "magicType": {
+                                            "type": ["line", "bar"]
+                                        },
+                                        "restore": {}
+                                    }
+                                },
+                                "series": [
+                                    {
+                                        "label": {
+                                          "show": true
+                                        },
+                                        "areaStyle": {
+                                          "color": "#def8ff"
+                                        },
+                                        "markLine": {
+                                            "lineStyle": {
+                                              "color": "#ed743e",
+                                              "type": "solid",
+                                              "width": 2
+                                            },
+                                            "label": {
+                                              "show": true,
+                                              "formatter": "Identified\ncomponents"
+                                            },
+                                            "data": [
+                                                { 
+                                                  "yAxis": 50
+                                                }
+                                            ]
+                                        },
+                                        "type": "line"
+                                    }
                                 ],
-                                  "toolbox": {
-                                      "feature": {
-                                          "dataZoom": {},
-                                          "magicType": {
-                                              "type": ["line", "bar"]
-                                          },
-                                          "restore": {}
-                                      }
-                                  },
-                                  "series": [
-                                      {
-                                          "label": {
-                                            "show": true
-                                          },
-                                          "areaStyle": {
-                                            "color": "#def8ff"
-                                          },
-                                          "markLine": {
-                                              "lineStyle": {
-                                                "color": "#ed743e",
-                                                "type": "solid",
-                                                "width": 2
-                                              },
-                                              "label": {
-                                                "show": true,
-                                                "formatter": "Identified\ncomponents"
-                                              },
-                                              "data": [
-                                                  { 
-                                                    "yAxis": 50
-                                                  }
-                                              ]
-                                          },
-                                          "type": "line"
-                                      }
-                                  ],
-                                  "areaStyle": {
-                                    "origin": "start"
-                                  }
-                              }
-                  lookup:
-                    uuid: component_count
-                    group:
-                      - columnGroup:
-                          source: Quarter
-                        functions:
-                          - source: Quarter
-                          - source: Sum of distinct components
-    - columns:
-        - properties:
+                                "areaStyle": {
+                                  "origin": "start"
+                                }
+                            }
+                lookup:
+                  uuid: component_count
+                  group:
+                    - columnGroup:
+                        source: Quarter
+                      functions:
+                        - source: Quarter
+                        - source: Sum of distinct components
+        - span: 6
+          properties:
+            font-size: xx-large
             margin-top: 30px
           components:
             - displayer:
