--- a/static/ods.dash.yaml
+++ b/static/ods.dash.yaml
@@ -8,6 +8,9 @@ global:
         x: false
     html:
       html: >-
+        <script>
+          document.title = "Your New Title Here";
+        </script>
         <div id="${this}" class="card-pf card-pf-aggregate-status" style="font-family: 'Source Sans Pro'; border: solid 1px #b3b3b3; box-shadow:none; width: 85%; margin: 0 10px; padding-bottom: 10px; border-radius: 8px; color: #00185e">
           <h2 style="font-weight: 700; font-size: x-large;" id="${this}Title"><em id="${this}Icon" class=""></em> ${title}</h2>
           <h3 style="font-weight: 700; font-size: xxx-large; color: #4d5592" id="${this}Value">${value} <span id="${this}Suffix" class=""></span></h3>
