Changes from Serverless Logic Web Tools

--- a/static/ods.dash.yaml
+++ b/static/ods.dash.yaml
@@ -13,48 +13,6 @@ global:
           <h3 style="font-weight: 700; font-size: xxx-large; color: #4d5592" id="${this}Value">${value} <span id="${this}Suffix" class=""></span></h3>
         </div>
 datasets:
-  - uuid: component_identified_count
-    content: >-
-      [
-        ["21/09", 28],
-        ["21/10", 29],
-        ["21/11", 30],
-        ["21/12", 30],
-        ["22/01", 30],
-        ["22/02", 30],
-        ["22/03", 31],
-        ["22/04", 31],
-        ["22/05", 33],
-        ["22/06", 33],
-        ["22/07", 38],
-        ["22/08", 42],
-        ["22/09", 44],
-        ["22/10", 44],
-        ["22/11", 44],
-        ["22/12", 49],
-        ["22/01", 50],
-        ["22/02", 51],
-        ["22/03", 52],
-        ["23/04", 56],
-        ["23/05", 56],
-        ["23/06", 58],
-        ["23/07", 56],
-        ["23/08", 57],
-        ["23/09", 58],
-        ["23/10", 59],
-        ["23/11", 59],
-        ["23/12", 59],
-        ["24/01", 59],
-        ["24/02", 61],
-        ["24/03", 61],
-        ["24/04", 58],
-        ["24/05", 57],
-      ]
-    columns:
-      - id: Month
-        type: LABEL
-      - id: Identified components
-        type: NUMBER
   - uuid: libraries_count
     content: >-
       [
@@ -66,42 +24,45 @@ datasets:
   - uuid: component_count
     content: >-
      [
-        ["21/09", 0, 0, 0],
-        ["21/10", 3, 0, 3],
-        ["21/11", 8, 0, 11],
-        ["21/12", 3, 0, 14],
-        ["22/01", 0, 0, 14],
-        ["22/02", 0, 0, 14],
-        ["22/03", 0, 0, 14],
-        ["22/04", 1, 1, 15],
-        ["22/05", 0, 0, 15],
-        ["22/06", 3, 0, 18],
-        ["22/07", 4, 0, 22],
-        ["22/08", 0, 1, 22],
-        ["22/09", 3, 0, 25],
-        ["22/10", 0, 0, 25],
-        ["22/11", 0, 0, 25],
-        ["22/12", 1, 0, 26],
-        ["22/01", 0, 0, 26],
-        ["22/02", 0, 0, 26],
-        ["22/03", 0, 0, 26],
-        ["23/04", 3, 1, 29],
-        ["23/05", 1, 0, 30],
-        ["23/06", 4, 1, 34],
-        ["23/07", 4, 1, 38],
-        ["23/08", 2, 0, 40],
-        ["23/09", 2, 0, 42],
-        ["23/10", 2, 0, 44],
-        ["23/11", 1, 0, 45],
-        ["23/12", 0, 0, 45],
-        ["24/01", 0, 0, 45],
-        ["24/02", 0, 0, 45],
-        ["24/03", 0, 3, 45],
-        ["24/04", 1, 11, 46],
+        ["21/09", 28, 0, 0, 0],
+        ["21/10", 29, 3, 0, 3],
+        ["21/11", 30, 8, 0, 11],
+        ["21/12", 30, 3, 0, 14],
+        ["22/01", 30, 0, 0, 14],
+        ["22/02", 30, 0, 0, 14],
+        ["22/03", 31, 0, 0, 14],
+        ["22/04", 31, 1, 1, 15],
+        ["22/05", 33, 0, 0, 15],
+        ["22/06", 33, 3, 0, 18],
+        ["22/07", 38, 4, 0, 22],
+        ["22/08", 42, 0, 1, 22],
+        ["22/09", 44, 3, 0, 25],
+        ["22/10", 44, 0, 0, 25],
+        ["22/11", 44, 0, 0, 25],
+        ["22/12", 49, 1, 0, 26],
+        ["22/01", 50, 0, 0, 26],
+        ["22/02", 51, 0, 0, 26],
+        ["22/03", 52, 0, 0, 26],
+        ["23/04", 56, 3, 1, 29],
+        ["23/05", 56, 1, 0, 30],
+        ["23/06", 58, 4, 1, 34],
+        ["23/07", 56, 4, 1, 38],
+        ["23/08", 57, 2, 0, 40],
+        ["23/09", 58, 2, 0, 42],
+        ["23/10", 59, 2, 0, 44],
+        ["23/11", 59, 1, 0, 45],
+        ["23/12", 59, 0, 0, 45],
+        ["24/01", 59, 0, 0, 45],
+        ["24/02", 61, 0, 0, 45],
+        ["24/03", 61, 0, 3, 45],
+        ["24/04", 58, 1, 11, 46],
+        ["24/05", 57, 0, 7, 46],
       ]
     columns:
       - id: Month
         type: LABEL
+      - id: Identified components
+        type: NUMBER
       - id: Components created
         type: NUMBER
       - id: Components updated
@@ -292,7 +253,7 @@ pages:
                     - id: Identified components
                       pattern: "#"
                 lookup:
-                    uuid: component_identified_count
+                    uuid: component_count
                     rowCount: 1
                     sort:
                       - order: DESCENDING
@@ -351,7 +312,7 @@ pages:
                                 "grid": {
                                   "top": 70
                                 },
-                                "color": ["#00185e", "#000e9c", "#0050d5", "#147de8", "#4ab0f5", "#73e3ff", "#7f7f7f", "#bfbfbf"],
+                                "color": ["#ed743e", "#00185e"],
                                 "legend": {
                                   "bottom": 0
                                 },
@@ -368,7 +329,7 @@ pages:
                               "yAxis": [
                                 {
                                   "type": "value",
-                                  "name": "Number of \ncomponents"
+                                  "name": "Components"
                                 }
                               ],
                                 "toolbox": {
@@ -382,27 +343,17 @@ pages:
                                 },
                                 "series": [
                                     {
+                                        "type": "line",
+                                        "axisLabel": {
+                                          "internal": "auto"
+                                        }
+                                    },
+                                    {
                                         "label": {
                                           "show": true
                                         },
                                         "areaStyle": {
                                           "color": "#def8ff"
-                                        },
-                                        "markLine": {
-                                            "lineStyle": {
-                                              "color": "#ed743e",
-                                              "type": "solid",
-                                              "width": 2
-                                            },
-                                            "label": {
-                                              "show": true,
-                                              "formatter": "Identified\ncomponents"
-                                            },
-                                            "data": [
-                                                { 
-                                                  "yAxis": 50
-                                                }
-                                            ]
                                         },
                                         "type": "line",
                                         "axisLabel": {
@@ -421,6 +372,7 @@ pages:
                         source: Month
                       functions:
                         - source: Month
+                        - source: Identified components
                         - source: Sum of distinct components
         - span: 6
           properties:
@@ -461,7 +413,7 @@ pages:
                                 "yAxis": [
                                   {
                                     "type": "value",
-                                    "name": "Number of \ncomponents"
+                                    "name": "Components"
                                   }
                                 ],
                                 "tooltip": {
